<resources>
    <string name="app_name">Friendstagram</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="action_login">Log in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to setup -->
    <string name="setup_profile_title">Choose Profile Picture</string>
    <string name="setup_profile_subtitle">Choose the picture you would like to use as your profile picture.</string>
    <string name="btn_default_picture">Use Default Picture</string>
    <string name="btn_choose_photo">Choose photo</string>
    <string name="btn_next">Next</string>
    <string name="action_select">Select</string>
    <string name="setup_success">Successfully completed setting up your profile</string>

    <!-- Strings related to bottom bar -->
    <string name="tab_home">Home</string>
    <string name="tab_account">Profile</string>
    <string name="tab_camera">Camera</string>

    <!-- Strings related to post actions -->
    <string name="action_post_like">Like</string>
    <string name="action_post_comment">Comment</string>
    <string name="action_post_send">Send</string>

    <!-- Strings related to content descriptions -->
    <string name="description_search">Search</string>
    <string name="description_notifications">Notifications</string>

    <!-- Strings related to permission dialogs -->
    <string name="permission_read_storage_rationale">This app needs access to your storage so it can show your pictures.</string>
    <string name="permission_read_storage_denied">Denied permission to display images</string>
    <string name="permission_write_storage_rationale">This app needs to be able to write to your storage so it can save your pictures to it.</string>
    <string name="permission_write_storage_denied">Denied permission to save images</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_deny">Deny</string>

    <!-- Strings related to login/register messages -->
    <string name="error_occurred">An error occurred</string>
    <string name="success_register">Successfully registered</string>
    <string name="success_login">Successfully logged in</string>
    <string name="error_login_invalid">Your login session is no longer valid. Please log in again!</string>

    <!-- Strings related to creating posts -->
    <string name="action_next">Next</string>
    <string name="message_filters_coming_soon">Filters Coming Soon</string>
    <string name="prompt_caption">Write a caption…</string>
    <string name="success_image_upload">Uploaded image successfully</string>
    <string name="error_image_upload">Failed to upload image!</string>

    <!-- Strings related to retrieving information -->
    <string name="error_occurred_user_info">Failed to retrieve user info</string>
    <string name="error_occurred_posts">Unable to retrieve posts</string>

    <!-- Strings related to profile information -->
    <string name="prompt_bio">Biography</string>
    <string name="description_settings">Open Settings</string>
    <string name="description_edit_profile">Edit Profile</string>
    <string name="description_follow_user">Follow %1$s</string>
    <string name="description_unfollow_user">Unfollow %1$s</string>
    <string name="btn_submit">Submit</string>

    <!-- String related to search -->
    <string name="search_hint">Search Friendstagram…</string>
    <string name="action_search">Search</string>
    <string name="error_invalid_username">Invalid username</string>
</resources>
