<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rbsoftware.friendstagram.ui.fragment.SetupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/camera_icon_layout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="6dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_camera" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginLeft="32dp"
                android:src="@drawable/ic_plus" />

        </FrameLayout>

        <TextView
            android:id="@+id/setup_profile_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setup_profile_title" />

        <TextView
            android:id="@+id/setup_profile_subtitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/setup_profile_subtitle" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDefaultPicture"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/btn_default_picture" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/btn_choose_photo" />
            </LinearLayout>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_next" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>